fix: type select overflow in the search container (#574)

--- a/resources/css/_general.css
+++ b/resources/css/_general.css
@@ -67,7 +67,7 @@ body {
 }
 
 .search-container {
-    @apply absolute z-50 flex flex-col mb-20 overflow-hidden bg-white rounded-lg top-24 left-8 right-8;
+    @apply absolute z-50 flex flex-col mb-20 overflow-visible bg-white rounded-lg top-24 left-8 right-8;
 }
 .theme-dark .search-container {
     @apply bg-theme-secondary-900;
